# hdlworkflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml  regression-tests.yml
hdlworkflow/: __init__.py  cli.py  core.py  gtkwave.py  hdlworkflow.py  logging.py  nvc.py  riviera.py  surfer.py  utils.py  vivado.py
test/test_libraries/0/: a.vhd  a_tb.py  a_tb.vhd  c.vhd  compile_order.json  d.vhd  test_libraries0.py
tests/test_compile_order/: compile_me_0.vhd  compile_me_1.vhdl  compile_me_2.sv  compile_me_3.v  compile_order.json  messy_compile_order.json  messy_compile_order.txt  mixed_hdl_compile_order.json  mixed_hdl_compile_order.txt  test_compile_order.py  top_compile_me.sv  top_compile_me.vhd  verilog_compile_order.json  verilog_compile_order.txt  vhdl_compile_order.json  vhdl_compile_order.txt
tests/test_extra_args/: test_extra_args.py
tests/test_libraries/: b.vhd  compile_order.json  d.vhd  e.vhd  test_libraries.py
tests/test_plusargs/: compile_order.json  counter.vhd  test_plusargs.py
tests/test_vhdl/: compile_order.json  fifo_sync_tb.py  test_vhdl.py
tests/vhdl/: array_pkg.vhd  fifo_sync.vhd  fifo_sync_tb.vhd  ram_simple_dual_port.vhd  standard_pkg.vhd
