[build-system]
requires = ["setuptools>=61.0", "wheel>=0.36"]
build-backend = "setuptools.build_meta"

[project]
name = "hdlworkflow"
version = "0.2.0"
authors = [
    {name="Scott Huynh", email="scott.s.huynh@gmail.com"},
    ]
requires-python = ">=3.10"
description = "Seamless FPGA workflows."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10", 
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    ]
keywords = ["fpga", "vhdl", "hdl", "cli", "simulation", "synthesis", "workflow"]

scripts.hdlworkflow = "hdlworkflow.hdlworkflow:hdlworkflow"

[tool.ruff]
line-length = 120
lint.select = ["UP"]