[build-system]
requires = ["setuptools>=61.0", "wheel>=0.36", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hdlworkflow"
dynamic = ["version"]
authors = [
    {name="Scott Huynh", email="scott.s.huynh@gmail.com"},
    ]
requires-python = ">=3.10"
description = "Seamless FPGA workflows."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10", 
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    ]
keywords = ["fpga", "vhdl", "hdl", "cli", "simulation", "synthesis", "workflow"]

scripts.hdlworkflow = "hdlworkflow.hdlworkflow:hdlworkflow"

[tool.setuptools_scm]
tag_regex = "^r(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
lint.select = ["UP"]